# CVAgent

./: .gitignore  CV-experience.txt  CV-personal.txt  CV-skills.txt  CV.yaml  LICENSE  README.md  advert.txt  example.yaml  main.py  pyproject.toml
rendercv_output/: John_Doe_CV.html  John_Doe_CV.md  John_Doe_CV.typ  john-doe-cv.html
